more fun with campaign and campaign stage id's

--- a/webservice/templates/show_campaign_stages.html
+++ b/webservice/templates/show_campaign_stages.html
@@ -66,7 +66,9 @@ Campaign Stages{%include 'help_button.html'%}
                     Select All<br><input type="checkbox" id="c_cbox_all" onchange="do_checkall();">
                 </th>
                 <th>Campaign Name</th>
+                <th>c_id</th>
                 <th>Campaign Stage</th>
+                <th>s_id</th>
                 <th>Active</th>
                 <th>Hold By</th>
                 <th>Creator</th>
@@ -82,8 +84,10 @@ Campaign Stages{%include 'help_button.html'%}
                     <!-- id is hidden by css look for #campaign_stages above -->
                     <td id="c_id_{{loop.index}}">{{stage.campaign_stage_id}}</td>
                     <td align="center"><input type="checkbox" id="c_cbox_{{loop.index}}" {{ 'disabled' if data.authorized[loop.index-1]!=True }}></td>
-                    <td>{{stage.campaign_obj.name}}<span class="ui label">{{stage.campaign_obj.campaign_id}}</span></td>
-                    <td><a href="{{pomspath}}/campaign_stage_info?campaign_stage_id={{stage.campaign_stage_id}}">{{stage.name}}</a><span class="ui label">{{stage.campaign_stage_id}}</span></td>
+                    <td>{{stage.campaign_obj.name}}</td>
+                    <td style="width: 4em; text-align:right">{{stage.campaign_obj.campaign_id}}</td>
+                    <td><a href="{{pomspath}}/campaign_stage_info?campaign_stage_id={{stage.campaign_stage_id}}">{{stage.name}}</a></td>
+                    <td style="width: 4em; text-align:right">{{stage.campaign_stage_id}}</td>
                     <td>{{ 'Yes' if stage.campaign_obj.active else 'No' }}</td>
                     <td>{{stage.experimenter_holder_obj.username}}</td>
                     <td>{{stage.experimenter_creator_obj.username}}</td>
