--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -28,8 +28,11 @@ Submission Details {%include 'help_button.html'%}
 <h3>
 Submission #{{submission.submission_id}}<br>
 jobsub_job_Id: {{submission.jobsub_job_id}} <br>
-Campaign Stage <a href="{{pomspath}}/campaign_stage_info?campaign_stage_id={{submission.campaign_stage_snapshot_obj.campaign_stage_id}}">{{submission.campaign_stage_snapshot_obj.name}}</a><br>
+Campaign Stage <a href="{{pomspath}}/campaign_stage_info?campaign_stage_id={{submission.campaign_stage_snapshot_obj.campaign_stage_id}}">{{submission.campaign_stage_snapshot_obj.name}}</a> 
+<span class="ui label">{{submission.campaign_stage_snapshot_obj.campaign_stage_id}}</span> <br/>
 in Campaign <a href="{{pomspath}}/show_campaigns?just_one={{submission.campaign_stage_snapshot_obj.campaign.campaign_obj.name}}">{{submission.campaign_stage_snapshot_obj.campaign.campaign_obj.name}}</a>
+<span class="ui label">{{submission.campaign_stage_snapshot_obj.campaign.campaign_obj.campaign_id}}</span>
+
 </h3>
 
 <div class="ui horizontal segments">
@@ -39,14 +42,15 @@ in Campaign <a href="{{pomspath}}/show_campaigns?just_one={{submission.campaign_
 
 Submission was: 
 {%if submission.recovery_tasks_parent %}
-a recovery launch for <a href="./submission_details?submission_id={{submission.recovery_tasks_parent}}">Submission #{{submission.recovery_tasks_parent}}</a> ;
+a recovery launch for <a href="./submission_details?submission_id={{submission.recovery_tasks_parent}}">Submission #{{submission.recovery_tasks_parent}}</a> 
 {%else%}
-a regular launch;
+a regular launch
 {%endif%}
+<br>
 
 {%if dataset %}
 {%if dataset[:13] == 'poms_depends_' %}
-launched on completion of  <a href="./submission_details?submission_id={{dataset[13:-2]}}">Submission #{{dataset[13:-2]}}</a> 
+...launched on completion of  <a href="./submission_details?submission_id={{dataset[13:-2]}}">Submission #{{dataset[13:-2]}}</a> 
 {%endif%}
 {%endif%}
 
@@ -112,7 +116,7 @@ Kick to Located
 {%endif%}
 <br>
 
-Re-Launch Submission on {{dataset}} <a href="{{pomspath}}/launch_jobs?campaign_stage_id={{submission.campaign_stage_id}}&dataset_override={{dataset}}"><button>Relaunch</button></a> <br>
+Re-Launch Submission on dataset {{dataset}} <a href="{{pomspath}}/launch_jobs?campaign_stage_id={{submission.campaign_stage_id}}&dataset_override={{dataset}}"><button>Relaunch</button></a> <br>
 {%endif%}
 
 Launch Recovery for Submission 
