--- a/webservice/templates/campaign_definition_edit.html
+++ b/webservice/templates/campaign_definition_edit.html
@@ -2,6 +2,8 @@
 
 {%block title%}
 POMS
+<script src="{{pomspath}}/static/js/json_field_editor.js"></script>
+<link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/json_field_editor.css">
 {%endblock%}
 
 <style type="text/css">
@@ -164,13 +166,13 @@ JobTypes {%include 'help_button.html'%}
       </div>
       <div class="one field">
 	<div class="field">
-          <label>Definition Parameters <i class="large edit link blue icon" id="edit_param_modal_btn"></i></label>
+          <label>Definition Parameters <i class="large edit link blue icon" id="edit_param_modal_btn" onclick="json_field_editor.start('ae_definition_parameters')"></i></label>
           <textarea id="ae_definition_parameters_text" disabled>[]</textarea>
 	</div>
       </div>
       <div class="one field">
 	<div class="field">
-           <label>Recovery Launches <i class="large edit link blue icon" id="edit_recovery_modal_btn"></i></label>
+           <label>Recovery Launches <i class="large edit link blue icon" id="edit_recovery_modal_btn" onclick="json_field_editor.recovery_start('ae_definition_recovery')"></i></label>
           <textarea id="ae_definition_recovery_text" disabled>[]</textarea>
         </div>
       </div>
@@ -353,86 +355,6 @@ function updateRepo(ind){
 
 }
 
-// ----------------- Section for editing Recovery Launches ------------------------------
-
-$("#edit_recovery_modal_btn").click(function() {
-  listLen = 5;
-  do_recp = true;
-  var recoveries = $("#ae_definition_recovery_text").val();
-  var rlist = JSON.parse(recoveries);
-  var i = 0;
-  //for (i = 0 ; i < rlist.length; i++ ) {
-  //    console.log ('edit_recovery_modal_btn rlist['+i+'][0]= ' + rlist[i][0] + ' parms = ' + rlist[i][1])
-  //}
-  // Some initializations, make edit buttons invisible first
-  for (i = 0; i < listLen ; i++) {
-    eleid = "#re_recover_p_icon_" + i;
-    $(eleid).hide();
-    poid = "#re_recover_p_" + i;
-    $("#re_recover_p_"+ i).children("span").text("[]");
-
-  }
-  var rlist_ind=[];
-  for (i = 0 ; i < rlist.length; i++ ) {
-
-      var sel = "#re_recover_"+i.toString()+" option[value="+rlist[i][0]+"]";
-      $(sel).prop('selected','selected');
-      cval = JSON.stringify(rlist[i][1]);
-      eleid_repo = "#re_recover_p_"+ i;
-      $(eleid_repo).children("span").text(cval);
-      eleid = "#re_recover_p_icon_" + i;
-      $(eleid).show();
-      $(eleid_repo).show();
-      rlist_ind.push(i);
-  }
-  for (i = 0; i < listLen ; i++) {
-    poid = "#re_recover_p_" + i;
-    var ret = $.inArray(i, rlist_ind)
-    if (ret == -1) {
-        $(poid).children().hide();
-        ini_empty_index.push(i);
-    } else {
-        $(poid).children().show();
-    }
-  }
-
-  $("#edit_recovery_modal").modal({
-    closable  : false,
-    onApprove : function(){
-      var rlist = [];
-      var s;
-      var sp
-      var ssp
-      for (i = 0; i < listLen ; i++) {
-         s  = $("#re_recover_"+i.toString()+" option:selected").val();
-         sp = $("#re_recover_p_"+i.toString()).children("span").text();
-         //console.log(' sp= ' + sp);
-         if (s) {
-             spo = JSON.parse(sp)
-             ssp = [s,spo]
-             //ssp = [s,sp];
-             rlist.push(ssp);
-             //rlist.push(s);
-         }
-      }
-      var sval = JSON.stringify(rlist);
-      $("#ae_definition_recovery_text").val(sval);
-      $("#ae_definition_recovery").val(sval);
-      $("#definition_add_edit_modal").modal('show');
-    },
-    onDeny : function(){
-      do_recp = false;      //reset
-      for (i = 0 ; i < ini_empty_index.length; i++ ) {
-        ival = ini_empty_index[i];
-        var sels = "#re_recover_"+ival+" option[value='']";
-        $(sels).prop('selected','selected');
-      }
-      $("#definition_add_edit_modal").modal('show');
-    },
-
-   }).modal('show');
-});
-
 // -----------  Editing recovery params override here ...
 
 
@@ -475,36 +397,6 @@ function toList(dict) {
         return [key, dict[key]];
     });
 }
-
-$("#edit_param_modal_btn").click(function() {
-
-  do_recp = false;
-
-  var parms_str = $("#ae_definition_parameters").val();
-  if (parms_str != "") {
-    //ep_parms = eval ("(" + parms_str + ")");
-
-    ep_parms = JSON.parse(parms_str);
-    if (Array.isArray(ep_parms)==false) { ep_parms = toList(ep_parms)}
-  }
-  ep_build_table_body();
-  $("#edit_param_modal").modal({
-    closable  : false,
-    onApprove : function(){
-      var data = ep_build_parms_string();
-      if (data[0] == "") {
-        $("#ae_definition_parameters_text").val(data[1]);
-        $("#ae_definition_parameters").val(data[1]);
-        $("#definition_add_edit_modal").modal('show');
-      } else {
-          return false;
-      }
-    },
-    onDeny : function(){
-      $("#definition_add_edit_modal").modal('show');
-    },
-    }).modal('show');
-});
 
 function ep_build_parms_string(pval) {
 
