--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -201,14 +201,14 @@ Campaign Stages {{ show_hint('', 'Help page') }}
       <div class="two fields">
         <div class="field">
             <label>Dataset or Split Data {{ show_hint('#Dataset', 'Dataset name') }}</label>
-            <input type="text" id="ae_dataset" name="ae_dataset" placeholder="dataset"></input>
+            <input type="text" id="ae_dataset" name="ae_dataset" placeholder="dataset" style="width: 90%"></input>
         
-            <i class="small edit link blue icon" onclick="split_type_picker.custom_edit('ae_split_type','ae_dataset')"></i>
+            <i class="edit link blue icon" onclick="split_type_picker.custom_edit('ae_split_type','ae_dataset')"></i>
         </div>
         <div class="field">
             <label>(Dataset) Split Type {{ show_hint('#Dataset-Split-Type', 'Set type') }}</label>
-            <input type="text" id="ae_split_type" name="ae_split_type">
-            <i class="small edit link blue icon" onclick="split_type_picker.start('ae_split_type')"></i>
+            <input type="text" id="ae_split_type" name="ae_split_type" style="width:90%">
+            <i class="edit link blue icon" onclick="split_type_picker.start('ae_split_type')"></i>
         </div>
       </div>
 
