launch campaign fix...

--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -85,7 +85,7 @@ Campaigns {%include 'help_button.html'%}
                     </a>
                 </td>
                 <td>
-                    <a href="{{pomspath}}/launch_campaign?campaign_id={{s.campaign_id}}}">
+                    <a href="{{pomspath}}/launch_campaign?campaign_id={{s.campaign_id}}">
                         <button type="button">
                         <i class="chart rocket icon"></i>
                         </button>
