--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -19,7 +19,7 @@ Campaigns {%include 'help_button.html'%}
     #campaign_table th:nth-child(1), table td:nth-child(1) {
         display: none;
     }
-    
+
 
     stagelink {
         background-color: yellow;
@@ -42,6 +42,19 @@ Campaigns {%include 'help_button.html'%}
     <i class="icon add square"></i>
     Add
 </button>
+
+<!-- <span id="span-upload" class="tiny ui teal button" {{ 'disabled' if (session_role=='coordinator') }}> </span> -->
+
+<form id="ini_upload_form" class="tiny ui buttons" method="POST" enctype="multipart/form-data" action="ini_to_campaign">
+    <label for="hidden-new-file" class="tiny ui teal button">
+        Pick .ini file
+        <input type="file" name="upload" id="hidden-new-file" style="display: none">
+    </label>
+    <label for="submit-new-file" class="tiny ui teal button" {{ 'disabled' if (session_role=='coordinator') }}>
+        <i class="icon cloud upload"></i>Upload
+        <input type="submit" id="submit-new-file" c-lass="ui teal button" name="Submit"  style="display: none">
+    </label>
+</form>
 
 <div>
     <table id="campaign_table" class="ui celled _table unstackable tablesorter tablesorter-ice">
@@ -651,13 +664,19 @@ $('#tag_field').keypress(function (event) {
     pick_just_one = function () {
         params = getSearchParams();
         if ( params['just_one'] ) {
-            inp= $("input.tablesorter-filter[data-column=2]"); 
+            inp= $("input.tablesorter-filter[data-column=2]");
             inp.val(params['just_one']);
             setTimeout(function(){inp.trigger('change')}, 500);
         }
-    }
-    $(document).ready(pick_just_one);
+    };
 
+    $(document).ready(pick_just_one);
+    /*
+    $("#span-upload").on("click", function() {
+        $('#hidden-new-file').click();
+        $('#ini_upload_form').submit();
+    });
+    */
 </script>
 
 {%endblock%}
