--- a/webservice/templates/index.html
+++ b/webservice/templates/index.html
@@ -44,7 +44,7 @@ Job Launches: {{launches}}
             </div>
             <div class="description">
                 POMS Access is suppled through FNAL services accounts.  The account must be registered in FERRY as analysis, production
-                or coordinator. If an account does not have access or needs a different level of access, follow the steps in the help link below.
+                or superuser. If an account does not have access or needs a different level of access, follow the steps in the help link below.
             </div>
         </div>
         <a target="_blank" href="{{url}}Getting-access-New-Experiments-New-Accounts-Users-and-Roles">
