--- a/webservice/templates/login_setup_edit.html
+++ b/webservice/templates/login_setup_edit.html
@@ -79,7 +79,7 @@ Login/Setup {{ show_hint('', 'Help page') }}
     <tfoot>
       <tr>
         <th colspan="5">
-          <button class="ui labled teal icon button" onclick="add_template();return false;") {{ 'disabled' if (session_role=='coordinator') }}>
+          <button class="ui labled teal icon button" onclick="add_template();return false;") {{ 'disabled' if (session_role=='superuser') }}>
             <i class="icon add square"></i>
             Add
           </button>
