--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -36,7 +36,7 @@ Campaign Stages {{ show_hint('', 'Help page') }}
   {%include "view_picker.html" %}
 
   <div class="inline fields">
-    <button class="ui labled teal icon button" onclick="add_campaign();return false;" {{ 'disabled' if (session_role=='coordinator') }}>
+    <button class="ui labled teal icon button" onclick="add_campaign();return false;" {{ 'disabled' if (session_role=='superuser') }}>
       <i class="icon add square"></i>
       Add
     </button>
@@ -118,7 +118,7 @@ Campaign Stages {{ show_hint('', 'Help page') }}
     <tfoot>
         <tr>
             <th colspan="9">
-                <button class="ui labled teal icon button" onclick="add_campaign();return false;" {{ 'disabled' if (session_role=='coordinator') }}>
+                <button class="ui labled teal icon button" onclick="add_campaign();return false;" {{ 'disabled' if (session_role=='superuser') }}>
                     <i class="icon add square"></i>
                     Add
                 </button>
