--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 
 {% macro show_hint(anchor, hint) %}
-    {% include 'help_button.html' %}
+  {#    {% include 'help_button.html' %}  task #21477 #}
 {% endmacro %}
 
 {%block header%}
