--- a/webservice/templates/campaign_task_files.html
+++ b/webservice/templates/campaign_task_files.html
@@ -20,6 +20,8 @@ POMS
 
 
 {%block subheader%}
+Campaign Stage {{CampaignStageSnapshot.name}} <span class="ui label">{{CampaignStageSnapshot.campaign_stage_id}}</span> <br/>
+in Campaign {{CampaignStageSnapshot.campaign.campaign_obj.name}}<span class="ui label">{{CampaignStageSnapshot.campaign.campaign_id}}</span>
 {%endblock%}
 
 
