Fix color for newly created stages

--- a/webservice/templates/gui_wf_edit.html
+++ b/webservice/templates/gui_wf_edit.html
@@ -45,7 +45,7 @@
 -->
         <tr>
             <td>Name:</td>
-            <td> <input id="node-label" value="new value"> </td>
+            <td> <input id="node-label" type="text" value="new value"> </td>
         </tr>
     </table>
     <input type="button" value="OK" id="node-saveButton">
@@ -185,6 +185,7 @@ function main() {
    };
 }
 
+//$('.ui.dropdown').dropdown();
 </script>
 
 {%endblock%}
