--- a/webservice/static/css/gui_editor_3.css
+++ b/webservice/static/css/gui_editor_3.css
@@ -149,7 +149,7 @@ div.box.selected {
     left:170px;
     z-index:299;
     width:250px;
-    height:120px;
+    /* height:120px; */
     background-color: #f9f9f9;
     border-style:solid;
     border-width:1px;
