Cleanup some relationship names. Reformat poms_model with 120 char line length.

--- a/webservice/templates/campaign_task_files.html
+++ b/webservice/templates/campaign_task_files.html
@@ -21,7 +21,7 @@ POMS
 
 {%block subheader%}
 Campaign Stage {{CampaignStageSnapshot.name}} <span class="ui label">{{CampaignStageSnapshot.campaign_stage_id}}</span> <br/>
-in Campaign {{CampaignStageSnapshot.campaign.campaign_obj.name}}<span class="ui label">{{CampaignStageSnapshot.campaign.campaign_id}}</span>
+in Campaign {{CampaignStageSnapshot.campaign_stage.campaign_obj.name}}<span class="ui label">{{CampaignStageSnapshot.campaign_stage.campaign_id}}</span>
 {%endblock%}
 
 
